src/cluster/gitlab-omnibus/gitlab-runner.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: gitlab-runner
 namespace: gitlab
spec:
 replicas: 1
 selector:
    matchLabels:
      app: gitlab-runner
 template:
    metadata:
      labels:
        app: gitlab-runner
    spec:
      serviceAccountName: gitlab-runner
      containers:
      - name: gitlab-runner
        image: gitlab/gitlab-runner:latest
        volumeMounts:
        - mountPath: /etc/gitlab-runner
          name: config
        - mountPath: /var/run/docker.sock
          name: docker-sock
      volumes:
      - name: config
        configMap:
            name: gitlab-runner-config
      - name: docker-sock
        hostPath:
          path: /var/run/docker.sock
