src/cluster/gitlab-omnibus/gitlab-omnibus.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: gitlab
 namespace: gitlab
spec:
 replicas: 1
 selector:
    matchLabels:
      app: gitlab
 template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
      - name: gitlab
        image: gitlab/gitlab-ce:latest
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        - name: ssh
          containerPort: 22
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/gitlab
          name: gitlab-config
        - mountPath: /var/log/gitlab
          name: gitlab-logs
        - mountPath: /var/opt/gitlab
          name: gitlab-data
      volumes:
      - name: gitlab-config
        persistentVolumeClaim:
          claimName: gitlab-pvc-config
      - name: gitlab-logs
        persistentVolumeClaim:
          claimName: gitlab-pvc-logs
      - name: gitlab-data
        persistentVolumeClaim:
          claimName: gitlab-pvc-data

---
apiVersion: v1
kind: Service
metadata:
 name: gitlab
 namespace: gitlab
spec:
 type: NodePort
 ports:
 - port: 80
   targetPort: 80
   protocol: TCP
   name: http
   nodePort: 31111
 - port: 22
   targetPort: 22
   protocol: TCP
   name: ssh
   nodePort: 30222
 selector:
    app: gitlab
