src/cluster/gitlab-omnibus/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: gitlab-ingress-https
 namespace: gitlab
 annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
 ingressClassName: nginx
 tls:
 - hosts:
    - gitlab.ublin.keenetic.pro
   secretName: gitlab-tls
 rules:
 - host: gitlab.ublin.keenetic.pro
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: gitlab
           port:
             number: 80
